# uniTesTap-data-structures-library-example

./: .clang-format  .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
include/: data_structures.h
scripts/: check_format
src/: Makefile.am  dynamic_array.c  heap.c  internal.h  test_dynamic_array.c  test_heap.c
